# tundra

./: .editorconfig  .gitignore  .gitmodules  .sconsign.dblite  .travis.yml  CMakeLists.txt  Makefile  Makefile.common  Makefile.setup  Makefile.unix  Makefile.win32  README  README.asciidoc  README.md  SConstruct  build.cmd  build.pl  completebuild.pl  make-git-version.pl  prof2text.pl  run-tests.pl  tundra.lua  tundra.nsi  units.lua
.github/workflows/: auto-release.yml  build.yml
doc/: .gitignore  Makefile  gpl3.rtf  license-header.h  license-header.lua  manual.asciidoc  manual.txt  todo-2.0.txt
examples/bison/: lexer.c  main.c  parser.y  tundra.lua
examples/cross-compile/: generator.c  program.c  syntax.lua  tundra.lua  units.lua
examples/cross-compile/support/: syntax.lua
examples/csharp/: units.lua
examples/csharp-sharedlib/: Main.cs  MyLib.cs  units.lua
examples/expensive_jobs/: dummy.c  tundra.lua
examples/external-source/: tundra.lua  units.lua
examples/fancyvs/: README.md  blah.cpp  blah.hpp  main.cpp  tundra.lua
examples/filecopy/: tundra.lua
examples/generator/: generator.c  hello.txt  program.c  tundra.lua
examples/generator-simple/: README.md  data.txt  generate-file.py  main.c  tundra.lua
examples/generator/support/: example-syntax.lua  units.lua
examples/generator/tundra/: example-syntax.lua  units.lua
examples/hello-world/: hello.c  hello.cc  tundra.lua  units.lua
examples/ispc/: lanes.ispc  main.c  tundra.lua  units.lua
examples/macos-universal-exe/: main.c  tundra.lua  units.lua
examples/nested-srcdir/: tundra.lua  units.lua
examples/objgroup/: a.c  b.c  c.c  main.c  tundra.lua
examples/osx-bundle/: appnib.xib  delegate.h  delegate.m  icon.icns  info.plist  tundra.lua  units.lua
examples/pch/: tundra.lua  units.lua
examples/pch/src/: included_in_pch.h  main.cpp  pch.h  src1.cpp  src1.h  src2.cpp  src3.cpp  src4.cpp
examples/pkgconfig/: testprog.c  tundra.lua
examples/rust/: tundra.lua  units.lua
examples/rust/my_crate/: Cargo.toml
examples/rust/native_lib/: lib.c
examples/rust/prog/: Cargo.toml  build.rs
examples/rust/shared_lib/: Cargo.toml  build.rs
examples/same-file/: main.c  tundra.lua  units.lua
examples/sharedlib/: main.c  slib.c  slib.h  tundra.lua
examples/static-shared/: lib.c  main.c  tundra.lua
examples/subproject-organisation/: README
examples/subproject-organization/: README.asciidoc  main-app.cpp  tundra.lua  units.lua
examples/yasm/: README  example.asm  main.c  tundra.lua
lua/etc/: lua.pc
lua/src/: lauxlib.c  lbaselib.c  lcode.c  ldebug.c  ldebug.h  lgc.c  liolib.c  lmathlib.c  loadlib.c  loslib.c  lstrlib.c  ltable.c  lua.h  luaconf.h  luacpp.cpp  lvm.c  print.c
scripts/: boot.lua  selftest.lua  tools.lua  tundra.lua
scripts/host/: linux.lua  macosx.lua  windows.lua
scripts/syntax/: embed_lua.lua  glob.lua
scripts/test/: t_env.lua
scripts/tools/: clang-osx.lua  dotnet.lua  gcc-osx.lua  gcc.lua  generic-cpp.lua  generic-dotnet.lua  mono.lua  msvc-80-32bit-reg.lua  msvc-80-64bit-reg.lua  msvc-vs2008.lua  msvc.lua  openwatcom.lua
scripts/tundra/: boot.lua  buildfile.lua  cache.lua  dagsave.lua  debugger.lua  decl.lua  depgraph.lua  environment.lua  filetrack.lua  init.lua  make.lua  nodegen.lua  path.lua  scanner.lua  selftest.lua  unitgen.lua  util.lua
scripts/tundra/host/: linux.lua  macosx.lua  windows.lua
scripts/tundra/ide/: codelite.lua  ide-common.lua  msvc-common.lua  msvc-rules.xml  msvc100.lua  msvc110.lua  msvc143.lua  msvc80.lua  xcode3.lua  xcode5.lua  xcode7.lua
scripts/tundra/nodegen/: dotnet.lua  native.lua
scripts/tundra/syntax/: bison.lua  embed_lua.lua  files.lua  flex.lua  glob.lua  install.lua  ispc.lua  lemon.lua  native.lua  osx-bundle.lua  pkgconfig.lua  qt.lua  rust-cargo.lua  testsupport.lua
scripts/tundra/test/: t_env.lua  t_path.lua
scripts/tundra/tools/: clang-osx.lua  dotnet.lua  gas.lua  (+31 more)
src/: .LuaFileSys.cpp.swp  .LuaFileSys.hpp.swp  .LuaUtil.cpp.swp  .LuaUtil.hpp.swp  .tundra.cpp.swp  Action.h  Atomic.hpp  BinaryData.hpp  BinaryWriter.cpp  BinaryWriter.hpp  Buffer.hpp  BuildQueue.cpp  BuildQueue.hpp  Common.cpp  Common.hpp  ConditionVar.cpp  ConditionVar.hpp  Config.hpp  DagData.hpp  DagGenerator.cpp  DagGenerator.hpp  DigestCache.cpp  DigestCache.hpp  Driver.cpp  Driver.hpp  Environment.hpp  Exec.cpp  Exec.hpp  ExecUnix.cpp  ExecWin32.cpp  FileIndexClient.hpp  FileInfo.cpp  FileInfo.hpp  FileSign.cpp  FileSign.hpp  Graph.cpp  Graph.hpp  GraphBuilder.cpp  GraphBuilder.hpp  Guid.cpp  (+118 more)
support/: bootstrap-osx.sh  github-upload.rb  mkdist-osx.sh  mkdist-win64.sh
test/: Lib1.lib  TundraTest.pm  a.cpp  b.cpp  depgraph.dot  h1.hpp  h2.hpp  tundra-nodecache.db  tundra-root.lua  tundra.db  tundra.lua
test/00-basic/: t.pl
test/01-filter-deps/: t.pl
test/05-spacepath/: t.pl
test/10-relative-srcdir/: t.pl
test/20-cppscan/: t.pl
test/30-asmscan/: t.pl
test/40-passes/: t.pl
unittest/: TestHarness.cpp  TestHarness.hpp  Test_BitFuncs.cpp  Test_Buffer.cpp  Test_Djb2.cpp  Test_Hash.cpp  Test_HashTable.cpp  Test_IncludeScanner.cpp  Test_Json.cpp  Test_MemAllocLinear.cpp  Test_Pow2.cpp  Test_StripAnsiColors.cpp  Test_TargetSelect.cpp  test_PathUtil.cpp
vs2012/: .gitignore  Tundra.sln  tundra-common.props
vs2012/Vs2012Ext/: Vs2012Ext.sln
vs2012/libtundra/: libtundra.vcxproj  libtundra.vcxproj.filters
vs2012/lua/: lua.vcxproj  lua.vcxproj.filters
vs2012/t2-inspect/: t2-inspect.vcxproj
vs2012/t2-lua/: t2-lua.vcxproj  t2-lua.vcxproj.filters
vs2012/t2-unittest/: t2-unittest.vcxproj
vs2012/tundra2/: tundra2.vcxproj
vs2017/libtundra/: Tundra.natvis  libtundra.vcxproj  libtundra.vcxproj.filters
vs2017/lua/: lua.vcxproj
vs2017/t2-inspect/: t2-inspect.vcxproj  t2-inspect.vcxproj.filters
vs2017/t2-lua/: t2-lua.vcxproj
vs2017/t2-unittest/: t2-unittest.vcxproj  t2-unittest.vcxproj.filters
vs2017/tundra2/: tundra2.vcxproj  tundra2.vcxproj.filters
windows-installer/: .gitignore  EnvVarUpdate.nsh  Makefile  Tundra.wxs  VS2012Addin.wxs  push-windows-release.pl  tundra.nsi
xcode/tundra.xcodeproj/: project.pbxproj
(+16 files in other folders)
